<style scoped>: Implement scoped selector matching in the slow path https://bugs.webkit.org/show_bug.cgi?id=77528

Source/WebCore:

Added scope information to SelectorCheckingContext, SelectorChecker methods and CSSStyleSelector methods.
Added matchOptions struct to CSSStyleSelector similar to SelectorCheckingContext in SelectorChecker.
Adapted the calling sites.

Reviewed by Antti Koivisto.

No new tests. (extended existing tests)

* css/CSSStyleSelector.cpp:
(RuleData):
(RuleSet):
(WebCore::CSSStyleSelector::determineScopingElement):
(WebCore::CSSStyleSelector::collectMatchingRules):
(WebCore::CSSStyleSelector::collectMatchingRulesForRegion):
(WebCore::CSSStyleSelector::matchScopedAuthorRules):
(WebCore::CSSStyleSelector::matchAuthorRules):
(WebCore::CSSStyleSelector::collectMatchingRulesForList):
* css/CSSStyleSelector.h:
(CSSStyleSelector):
(MatchOptions):
(WebCore::CSSStyleSelector::MatchOptions::MatchOptions):
* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::checkSelector):
* css/SelectorChecker.h:
(WebCore::SelectorChecker::SelectorCheckingContext::SelectorCheckingContext):
(SelectorCheckingContext):
(SelectorChecker):

LayoutTests:

Extended existing <style scoped> tests to also verify that selector matching doesn't exceed the scoping element.

Reviewed by Antti Koivisto.

* fast/css/style-scoped/style-scoped-basic-expected.txt:
* fast/css/style-scoped/style-scoped-basic.html:
* fast/css/style-scoped/style-scoped-remove-scoped-expected.txt:
* fast/css/style-scoped/style-scoped-remove-scoped.html:
* fast/css/style-scoped/style-scoped-set-scoped-expected.txt:
* fast/css/style-scoped/style-scoped-set-scoped.html:

Canonical link: https://commits.webkit.org/95747@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107911 268f45cc-cd09-0410-ab3c-d52691b4dbfc